# ARUSSim

./: Doxyfile
.github/workflows/: docs_pages_workflow.yml  doxygen_doc.yml  static.yml
docs/: index.md
docs/_source/: conf.py
docs/content/: howToDoc.md
src/arussim/: CMakeLists.txt  package.xml
src/arussim/config/: arussim_rviz_config.rviz  params.yaml
src/arussim/include/arussim/: ConeXYZColorScore.h  PointXYZColorScore.h  arussim_node.hpp
src/arussim/launch/: arussim.launch.py
src/arussim/resources/tracks/: Enrevesao1.pcd  FSG.pcd  acceleration.pcd  prueba.pcd
src/arussim/src/: arussim_node.cpp
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: Cmd.msg  State.msg
src/track_editor/: drawView.py  guiLogic.py  main.py  mapFile.py  points_to_circuit.py
